# UNI--structs--and-algotitms

./: Makefile  README.md  Zadania_na_laby_1-2_razdel.doc  first_lab
1-st lub/: dynamic_stack.c  dynamic_stack.h  source.c
10-th_lab/: binary_tree_with_substack.c  binary_tree_with_substack.h  main.c  menu.c  menu.h
11-th_lab/: binary_tree.c  binary_tree.h  main.c  menu.c  menu.h
12-th_lab/: binary_tree.c  binary_tree.h  main.c  menu.c  menu.h
13-th_lab/: main.c  menu.c  menu.h  sorting.c  sorting.h
14-th_lab/: a.out  main.c  menu.c  menu.h  sorting.c  sorting.h
15-th_lab/: main.c  menu.c  menu.h  sorting.c  sorting.h
16-th_lab/: hash_table.cpp  hash_table.h  menu.cpp
18-th_lab/: hash_table.cpp  hash_table.h  hash_table_2.cpp
19-th_lab/: 2-4-3.cpp  ExtHash.cpp  ExtHash.h
2-nd lab/: main.c  menu.c  menu.h  static_queue.c  static_queue.h
3-rd_lab/: a.out  dynamic_queue.c  dynamic_queue.h  main.c  menu.c  menu.h
4-th_lab/: linked_list.c  linked_list.h  main.c  menu.c  menu.h
5-th_lab/: linked_point_list.c  linked_point_list.h  main.c  menu.c  menu.h
6-th_lab/: a.out  dynamic_stack.c  linked_dynamic_list.c  linked_dynamic_list.h  linked_point_list.c  main.c  menu.c  menu.h
7-th_lab/: doubly_linked_list.c  doubly_linked_list.h  main.c  menu.c  menu.h
kursach/: CMakeLists.txt  Makefile  app  file.cpp  file.h  input.txt  main.cpp  menu.cpp  menu.h  railway.cpp  railway.h  railway.txt  railway_depot.cpp  railway_depot.h  task.md  train.cpp  train.h
kursach/src/: file.cpp  menu.cpp  menu.h  railway.cpp  railway.h  railway_depot.cpp  railway_depot.h
(+13 files in other folders)
